Fixed horizontal scroll on mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+@media screen and (max-width: 576px) {
+  #root {
+    width: 100%;
+    height: 100%;
+  }
+
+  #root > div {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .App {
   text-align: center;
 }
